force-app/core/main/default/objects/Demo_Story__c/Demo_Story__c.object-meta.xml
<CustomObject>
    <label>Personalized Website</label>
    <nameField>
        <label>Experience Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Personalized Websites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>