force-app/core/main/default/objects/Demo_Story__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>