force-app/core/main/default/objects/Demo_Story__c/fields/Brand_Domain__c.field-meta.xml
<CustomField>
    <fullName>Brand_Domain__c</fullName>
    <label>Brand Domain</label>
    <type>Url</type>
</CustomField>