force-app/core/main/default/objects/Demo_Story__c/fields/Brand_Kit__c.field-meta.xml
<CustomField>
    <fullName>Brand_Kit__c</fullName>
    <label>Brand Kit</label>
    <description>The Demo_Theme__c brand kit this Personalized Website is skinned with. Resolved at preview time (brand name, colors, logo) so swapping the kit re-skins the site live, matching the 2-way sims.</description>
    <referenceTo>Demo_Theme__c</referenceTo>
    <relationshipLabel>Personalized Websites</relationshipLabel>
    <relationshipName>Personalized_Websites</relationshipName>
    <type>Lookup</type>
</CustomField>