force-app/core/main/default/objects/Demo_Story__c/fields/Config_JSON__c.field-meta.xml
<CustomField>
    <fullName>Config_JSON__c</fullName>
    <label>Config JSON</label>
    <description>The full render config object (brand, persona, per-stage tokens) that drives HTML generation. Produced by AI, editable.</description>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>