force-app/core/main/default/objects/Demo_Story__c/fields/Connector_Id__c.field-meta.xml
<CustomField>
    <fullName>Connector_Id__c</fullName>
    <label>Connector Id</label>
    <description>Website connector UUID used for the Data Cloud Web SDK beacon on the generated experience.</description>
    <length>60</length>
    <type>Text</type>
</CustomField>