force-app/core/main/default/objects/Demo_Story__c/fields/Data_Space__c.field-meta.xml
<CustomField>
    <fullName>Data_Space__c</fullName>
    <label>Data Space</label>
    <defaultValue>&quot;default&quot;</defaultValue>
    <length>80</length>
    <type>Text</type>
</CustomField>