force-app/core/main/default/objects/Demo_Story__c/fields/Deployed_Artifacts__c.field-meta.xml
<CustomField>
    <fullName>Deployed_Artifacts__c</fullName>
    <label>Deployed Artifacts</label>
    <description>JSON of created org artifact ids (schemas, points, transformers, static resources) for clean teardown.</description>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>