force-app/core/main/default/objects/Demo_Story__c/fields/Last_Deployed__c.field-meta.xml
<CustomField>
    <fullName>Last_Deployed__c</fullName>
    <label>Last Deployed</label>
    <type>DateTime</type>
</CustomField>