force-app/core/main/default/objects/Demo_Story__c/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <label>Persona</label>
    <referenceTo>Demo_Persona__c</referenceTo>
    <relationshipLabel>Demo Stories</relationshipLabel>
    <relationshipName>Demo_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>