force-app/core/main/default/objects/Demo_Story__c/fields/Primary_Color__c.field-meta.xml
<CustomField>
    <fullName>Primary_Color__c</fullName>
    <label>Primary Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>