force-app/core/main/default/objects/Demo_Story__c/fields/Profile_Data_Graph__c.field-meta.xml
<CustomField>
    <fullName>Profile_Data_Graph__c</fullName>
    <label>Profile Data Graph</label>
    <description>Real-time profile data graph the Personalization Points bind to. Must be a REAL-TIME graph for WPM to list the PPs (meshmesh: Real_Time_Personalization).</description>
    <defaultValue>&quot;Real_Time_Personalization&quot;</defaultValue>
    <length>120</length>
    <type>Text</type>
</CustomField>