force-app/core/main/default/objects/Demo_Story__c/fields/Rtom_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Rtom_Enabled__c</fullName>
    <label>Real Time Offer Management</label>
    <description>When on, the Personalized Website renders (and will provision) a Real Time Offer Management section. Roadmap: wires to RTOM backend; today it is the toggle/scaffold.</description>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>